<resources>
    <string name="app_name">TuxGuitar</string>
    <string name="action_settings">Settings</string>
	<string name="global_error_message">An unexpected error has occurred</string>
	<string name="global_exit_confirm_message">Are you sure you want to exit?</string>
	<string name="global_button_ok">OK</string>
	<string name="global_button_cancel">Cancel</string>
	<string name="global_button_clean">Clean</string>
	<string name="global_button_remove">Remove</string>
	<string name="global_button_add">Add</string>
	<string name="global_button_edit">Edit</string>
	<string name="global_spinner_select_option">-- Select --</string>
	<string name="action_menu_file">File</string>
	<string name="action_menu_edit">Edit</string>
	<string name="action_menu_view">View</string>
	<string name="action_menu_transport">Player</string>
	<string name="action_menu_caret">Caret</string>
	<string name="action_menu_composition">Composition</string>
	<string name="action_menu_track">Track</string>
	<string name="action_menu_measure">Measure</string>
	<string name="action_menu_beat">Beat</string>
	<string name="action_menu_duration">Duration</string>
	<string name="action_menu_velocity">Dynamic</string>
	<string name="action_menu_effect">Effect</string>
	<string name="action_menu_settings">Settings</string>
	<string name="action_tab_keyboard_toggle">Toggle Keyboard</string>
    <string name="action_file_new">New</string>
    <string name="action_file_open">Open</string>
    <string name="action_file_save">Save</string>
    <string name="action_file_save_as">Save As</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_set_voice_1">Select Voice 1</string>
    <string name="action_set_voice_2">Select Voice 2</string>
	<string name="action_copy">Copy</string>
	<string name="action_paste">Paste</string>
    <string name="action_view_channel_list">Instruments</string>
	<string name="action_view_layout_show_score">Display score</string>
    <string name="action_view_layout_show_chord_name">Display chord names</string>
    <string name="action_view_layout_show_chord_diagram">Display chord diagrams</string>
    <string name="action_transport_play">Play</string>
    <string name="action_transport_pause">Pause</string>
    <string name="action_transport_stop">Stop</string>
    <string name="action_go_left">Go Left</string>
    <string name="action_go_right">Go Right</string>
    <string name="action_go_up">Go Up</string>
    <string name="action_go_down">Go Down</string>
    <string name="action_change_tempo">Change Tempo</string>
    <string name="action_change_clef">Change Clef</string>
    <string name="action_change_key_signature">Change Key Signature</string>
    <string name="action_change_time_signature">Change Time Signature</string>
    <string name="action_change_triplet_feel">Change Triplet Feel</string>
    <string name="action_change_repeat_open">Open Repeat</string>
    <string name="action_change_repeat_close">Close Repeat</string>
    <string name="action_change_repeat_alternative">Alternative Repeats</string>
    <string name="action_change_info">Properties</string>
    <string name="action_track_add">Add Track</string>
    <string name="action_track_remove">Remove Track</string>
    <string name="action_track_clone">Clone Track</string>
    <string name="action_track_move_up">Move Track Up</string>
    <string name="action_track_move_down">Move Track Down</string>
    <string name="action_track_change_mute">Set Mute</string>
    <string name="action_track_change_solo">Set Solo</string>
    <string name="action_track_set_name">Track Name</string>
    <string name="action_track_set_channel">Change Instrument</string>
    <string name="action_track_change_tuning">Change Tuning</string>
	<string name="action_track_change_string_count">Change Line Count</string>
    <string name="action_measure_add">Add Measure</string>
    <string name="action_measure_clean">Clean Measure</string>
    <string name="action_measure_remove">Remove Measure</string>
    <string name="action_change_tied_note">Set Tied Note</string>
	<string name="action_clean_beat">Clean Beat</string>
	<string name="action_decrement_note_semitone">Decrement Semitone</string>
	<string name="action_increment_note_semitone">Increment Semitone</string>
	<string name="action_delete_note_or_rest">Delete Note or Rest</string>
	<string name="action_insert_rest_beat">Insert Rest Beat</string>
	<string name="action_move_beats_left">Move Beats Left</string>
	<string name="action_move_beats_right">Move Beats Right</string>
	<string name="action_remove_unused_voice">Remove Unused Voice</string>
	<string name="action_set_voice_auto">Set Voice Auto</string>
	<string name="action_set_voice_down">Set Voice Down</string>
	<string name="action_set_voice_up">Set Voice Up</string>
	<string name="action_shift_note_down">Shift Note Down</string>
	<string name="action_shift_note_up">Shift Note Up</string>
	<string name="action_change_stroke">Up/Down Stroke</string>
	<string name="action_change_text">Insert Text</string>
	<string name="action_set_duration_whole">Whole</string>
	<string name="action_set_duration_half">Half</string>
	<string name="action_set_duration_quarter">Quarter</string>
	<string name="action_set_duration_eighth">Eighth</string>
	<string name="action_set_duration_sixteenth">Sixteenth</string>
	<string name="action_set_duration_thirtysecond">Thirty Second</string>
	<string name="action_set_duration_sixtyfourth">Sixty Fourth</string>
	<string name="action_set_duration_dotted">Dotted</string>
	<string name="action_set_duration_doubledotted">Double Dotted</string>
	<string name="action_set_duration_division_type">Division Type</string>
	<string name="action_set_duration_division_type_1">Normal</string>
	<string name="action_set_duration_division_type_3">3</string>
	<string name="action_set_duration_division_type_5">5</string>
	<string name="action_set_duration_division_type_6">6</string>
	<string name="action_set_duration_division_type_7">7</string>
	<string name="action_set_duration_division_type_9">9</string>
	<string name="action_set_duration_division_type_10">10</string>
	<string name="action_set_duration_division_type_11">11</string>
	<string name="action_set_duration_division_type_12">12</string>
	<string name="action_set_duration_division_type_13">13</string>
	<string name="action_set_velocity_ppp">Piano Pianissimo</string>
	<string name="action_set_velocity_pp">Pianissimo</string>
	<string name="action_set_velocity_p">Piano</string>
	<string name="action_set_velocity_mp">Mezzo Piano</string>
	<string name="action_set_velocity_mf">Mezzo Forte</string>
	<string name="action_set_velocity_f">Forte</string>
	<string name="action_set_velocity_ff">Fortissimo</string>
	<string name="action_set_velocity_fff">Forte Fortissimo</string>
	<string name="action_change_vibrato">Vibrato</string>
	<string name="action_change_bend">Bend</string>
	<string name="action_change_dead_note">Dead Note</string>
	<string name="action_change_slide">Slide</string>
	<string name="action_change_hammer">Hammer-on/Pull-off</string>
	<string name="action_change_tremolo_bar">Tremolo Bar</string>
	<string name="action_change_ghost_note">Ghost Note</string>
	<string name="action_change_accentuated_note">Accentuated Note</string>
	<string name="action_change_heavy_accentuated_note">Heavy Accentuated Note</string>
	<string name="action_change_harmonic">Harmonic</string>
	<string name="action_change_grace">Grace Note</string>
	<string name="action_change_trill">Trill</string>
	<string name="action_change_tremolo_picking">Tremolo Picking</string>
	<string name="action_change_palm_mute">Palm Mute</string>
	<string name="action_change_let_ring">Let Ring</string>
	<string name="action_change_staccato">Staccato</string>
	<string name="action_change_tapping">Tapping</string>
	<string name="action_change_slapping">Slapping</string>
	<string name="action_change_popping">Popping</string>
	<string name="action_change_fade_in">Fade In</string>
    <string name="action_channel_list_add">Add Instrument</string>
    <string name="action_channel_list_item_edit">Edit Instrument</string>
    <string name="action_channel_list_item_remove">Remove Instrument</string>
    <string name="action_channel_list_item_remove_confirm_question">Are you sure you want to remove this instrument?</string>
	<string name="action_track_tuning_list_item_add">Add</string>
	<string name="action_track_tuning_list_item_edit">Edit</string>
	<string name="action_track_tuning_list_item_remove">Remove</string>
	<string name="action_track_tuning_list_item_remove_confirm_question">Are you sure you want to remove this string?</string>
	<string name="main_drawer_file">File</string>
	<string name="main_drawer_tracks">Tracks</string>
	<string name="storage_default_filename">Untitled</string>
	<string name="storage_export_to">Export %1$s</string>
	<string name="storage_saf_file_format_chooser_title">Select a File Format</string>
	<string name="storage_saf_assets_provider_title">Demo Songs</string>
	<string name="browser_refresh">Refresh</string>
	<string name="browser_back">Back</string>
	<string name="browser_root">Root</string>
	<string name="browser_settings">Settings</string>
	<string name="browser_save_label">Save</string>
	<string name="preferences_midi_category_title">MIDI Settings</string>
	<string name="preferences_midi_output_port_title">MIDI Output Port</string>
	<string name="preferences_storage_category_title">Storage Settings</string>
	<string name="preferences_storage_storage_use_saf_provider_title">Use SAF provider</string>
	<string name="preferences_storage_storage_use_saf_provider_summary">Use Storage Access Framework to browse files</string>
	<string name="tempo_dlg_tempo_label">Tempo:</string>
	<string name="tempo_dlg_options_apply_to_song">Apply this tempo in the whole song</string>
	<string name="tempo_dlg_options_apply_to_end">Apply this tempo to the end</string>
	<string name="tempo_dlg_options_apply_to_next_marker">Apply this tempo to the next tempo marker</string>
	<string name="song_info_dlg_name_label">Name</string>
	<string name="song_info_dlg_artist_label">Artist</string>
	<string name="song_info_dlg_album_label">Album</string>
	<string name="song_info_dlg_author_label">Author</string>
	<string name="song_info_dlg_date_label">Date</string>
	<string name="song_info_dlg_copyright_label">Copyright</string>
	<string name="song_info_dlg_writer_label">Tab Creator</string>
	<string name="song_info_dlg_transcriber_label">Transcribed By</string>
	<string name="song_info_dlg_comments_label">Comments</string>
	<string name="measure_add_dlg_count_label">Add Count:</string>
	<string name="measure_add_dlg_options_before_position">Add before the current position</string>
	<string name="measure_add_dlg_options_after_position">Add after the current position</string>
	<string name="measure_add_dlg_options_at_end">Add at the end</string>
	<string name="harmonic_dlg_type_nh">[N.H] Natural Harmonic</string>
	<string name="harmonic_dlg_type_ah">[A.H] Artificial Harmonic</string>
	<string name="harmonic_dlg_type_th">[T.H] Tapped Harmonic</string>
	<string name="harmonic_dlg_type_ph">[P.H] Pinch Harmonic</string>
	<string name="harmonic_dlg_type_sh">[S.H] Semi Harmonic</string>
	<string name="channel_edit_dlg_name_label">Name</string>
	<string name="channel_edit_dlg_bank_label">Bank</string>
	<string name="channel_edit_dlg_program_label">Program</string>
	<string name="channel_edit_dlg_percussion_label">Percussion Channel</string>
	<string name="channel_edit_dlg_volume_label">Volume</string>
	<string name="channel_edit_dlg_balance_label">Balance</string>
	<string name="channel_edit_dlg_chorus_label">Chorus</string>
	<string name="channel_edit_dlg_reverb_label">Reverb</string>
	<string name="channel_edit_dlg_phaser_label">Phaser</string>
	<string name="channel_edit_dlg_tremolo_label">Tremolo</string>
</resources>