<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_menu_duration" >

    <item
        android:id="@+id/action_change_vibrato"
        android:title="@string/action_change_vibrato"/>
    <item
        android:id="@+id/action_change_bend"
        android:title="@string/action_change_bend"/>
    <item
        android:id="@+id/action_change_dead_note"
        android:title="@string/action_change_dead_note"/>
    <item
        android:id="@+id/action_change_slide"
        android:title="@string/action_change_slide"/>
    <item
        android:id="@+id/action_change_hammer"
        android:title="@string/action_change_hammer"/>
    <item
        android:id="@+id/action_change_tremolo_bar"
        android:title="@string/action_change_tremolo_bar"/>
    <item
        android:id="@+id/action_change_ghost_note"
        android:title="@string/action_change_ghost_note"/>
    <item
        android:id="@+id/action_change_accentuated_note"
        android:title="@string/action_change_accentuated_note"/>
    <item
        android:id="@+id/action_change_heavy_accentuated_note"
        android:title="@string/action_change_heavy_accentuated_note"/>
    <item
        android:id="@+id/action_change_harmonic"
        android:title="@string/action_change_harmonic"/>
    <item
        android:id="@+id/action_change_grace"
        android:title="@string/action_change_grace"/>
    <item
        android:id="@+id/action_change_trill"
        android:title="@string/action_change_trill"/>
    <item
        android:id="@+id/action_change_tremolo_picking"
        android:title="@string/action_change_tremolo_picking"/>
    <item
        android:id="@+id/action_change_palm_mute"
        android:title="@string/action_change_palm_mute"/>
    <item
        android:id="@+id/action_change_let_ring"
        android:title="@string/action_change_let_ring"/>
    <item
        android:id="@+id/action_change_staccato"
        android:title="@string/action_change_staccato"/>
    <item
        android:id="@+id/action_change_tapping"
        android:title="@string/action_change_tapping"/>
    <item
        android:id="@+id/action_change_slapping"
        android:title="@string/action_change_slapping"/>
    <item
        android:id="@+id/action_change_popping"
        android:title="@string/action_change_popping"/>
    <item
        android:id="@+id/action_change_fade_in"
        android:title="@string/action_change_fade_in"/>
</menu>