<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/action_menu_duration" >

    <item
        android:id="@+id/action_change_tied_note"
        android:checkable="true"
        android:title="@string/action_change_tied_note"
        android:icon="@drawable/ic_tiednote_white_24dp"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_change_vibrato"
        android:title="@string/action_change_vibrato"
        android:icon="@drawable/ic_effect_vibrato_white_24dp"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_change_slide"
        android:title="@string/action_change_slide"
        android:icon="@drawable/ic_effect_slide_white_24dp"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_change_hammer"
        android:title="@string/action_change_hammer"
        android:icon="@drawable/ic_effect_hammer_white_24dp"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_change_bend"
        android:title="@string/action_change_bend"
        android:icon="@drawable/ic_effect_bend_white_24dp"/>
    <item
        android:id="@+id/action_change_dead_note"
        android:title="@string/action_change_dead_note"
        android:icon="@drawable/ic_effect_dead_white_24dp"/>
    <item
        android:id="@+id/action_change_palm_mute"
        android:title="@string/action_change_palm_mute"
        android:icon="@drawable/ic_effect_palm_mute_white_24dp"/>
    <item
        android:id="@+id/action_change_tremolo_bar"
        android:title="@string/action_change_tremolo_bar"
        android:icon="@drawable/ic_effect_tremolo_bar_white_24dp"/>
    <item
        android:id="@+id/action_change_ghost_note"
        android:title="@string/action_change_ghost_note"
        android:icon="@drawable/ic_effect_ghost_white_24dp"/>
    <item
        android:id="@+id/action_change_accentuated_note"
        android:title="@string/action_change_accentuated_note"
        android:icon="@drawable/ic_effect_accentuated_white_24dp"/>
    <item
        android:id="@+id/action_change_heavy_accentuated_note"
        android:title="@string/action_change_heavy_accentuated_note"
        android:icon="@drawable/ic_effect_heavy_accentuated_white_24dp"/>
    <item
        android:id="@+id/action_change_harmonic"
        android:title="@string/action_change_harmonic"
        android:icon="@drawable/ic_effect_harmonic_white_24dp"/>
    <item
        android:id="@+id/action_change_grace"
        android:title="@string/action_change_grace"
        android:icon="@drawable/ic_effect_grace_white_24dp"/>
    <item
        android:id="@+id/action_change_trill"
        android:title="@string/action_change_trill"
        android:icon="@drawable/ic_effect_trill_white_24dp"/>
    <item
        android:id="@+id/action_change_tremolo_picking"
        android:title="@string/action_change_tremolo_picking"
        android:icon="@drawable/ic_effect_tremolo_picking_white_24dp"/>
    <item
        android:id="@+id/action_change_staccato"
        android:title="@string/action_change_staccato"
        android:icon="@drawable/ic_effect_staccato_white_24dp"/>
    <item
        android:id="@+id/action_change_tapping"
        android:title="@string/action_change_tapping"
        android:icon="@drawable/ic_effect_tapping_white_24dp"/>
    <item
        android:id="@+id/action_change_slapping"
        android:title="@string/action_change_slapping"
        android:icon="@drawable/ic_effect_slapping_white_24dp"/>
    <item
        android:id="@+id/action_change_popping"
        android:title="@string/action_change_popping"
        android:icon="@drawable/ic_effect_popping_white_24dp"/>
    <item
        android:id="@+id/action_change_fade_in"
        android:title="@string/action_change_fade_in"
        android:icon="@drawable/ic_effect_fade_in_white_24dp"/>
    <item
        android:id="@+id/action_change_let_ring"
        android:title="@string/action_change_let_ring"/>
    <item
        android:id="@+id/action_change_text"
        android:title="@string/action_change_text"
        android:icon="@drawable/ic_text_white_24dp"/>
    <item
        android:id="@+id/action_clean_beat"
        android:title="@string/action_clean_beat"
        android:icon="@drawable/ic_delete_white_24dp"/>
    <item
        android:id="@+id/action_move_beats_left"
        android:title="@string/action_move_beats_left"/>
    <item
        android:id="@+id/action_move_beats_right"
        android:title="@string/action_move_beats_right"/>
    <item
        android:id="@+id/action_set_voice_auto"
        android:title="@string/action_set_voice_auto"/>
    <item
        android:id="@+id/action_set_voice_down"
        android:title="@string/action_set_voice_down"/>
    <item
        android:id="@+id/action_set_voice_up"
        android:title="@string/action_set_voice_up"/>
    <item
        android:id="@+id/action_change_stroke"
        android:title="@string/action_change_stroke"/>

</menu>