<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<GridLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:columnCount="2"
		style="?attr/dialogStyle">
	
		<TextView 
			android:id="@+id/tempo_dlg_tempo_label"
			android:text="@string/tempo_dlg_tempo_label" 
			android:layout_gravity="fill_horizontal|center_vertical"
			style="?attr/textViewStyle" />
	
		<Spinner 
			android:id="@+id/tempo_dlg_tempo_value"
			android:layout_gravity="fill_horizontal|center_vertical" />
	
		<Space
			android:layout_gravity="fill"
			android:layout_columnSpan="2"
			style="?attr/dialogSectionSpacerStyle" />
			
		<RadioGroup 
			android:id="@+id/tempo_dlg_options_group"
			android:layout_gravity="fill_horizontal|center_vertical"
			android:layout_columnSpan="2" >
	
			<RadioButton android:id="@+id/tempo_dlg_options_apply_to_song"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/tempo_dlg_options_apply_to_song" />
	
			<RadioButton android:id="@+id/tempo_dlg_options_apply_to_end"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/tempo_dlg_options_apply_to_end" />
	
			<RadioButton android:id="@+id/tempo_dlg_options_apply_to_next_marker"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/tempo_dlg_options_apply_to_next_marker" />
		</RadioGroup>
	
	</GridLayout>

</ScrollView>